[package]
name = "dabba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["dir", "event", "sched", "user", "mount", "fs", "process", "poll", "signal", "hostname"] }
serde = "1.0.188"
ureq = "2.7.1"
log = { version = "0.4", features = ["std"] }
num_enum = "0.7.0"
